--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/app.ts",
     "dev": "tsx watch src/app.ts",
     "test": "jest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "start:prod": "pm2 reload app"
   },
   "dependencies": {
     "express": "^5.1.0"
