--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start:prod": "pm2 reload app"
   },
   "dependencies": {
+    "@sentry/node": "^10.16.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
